[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0, <4",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 72
exclude = '''   # exclude common dirs
(
    /(
        jomiel/comm/proto
        \.tox
        \.git
        docker
        build
        docs
        dist
    )/
)
'''

[tool.check-manifest]
ignore = [
    "jomiel/comm/proto/*.py",
    "jomiel/VERSION",
    "jomiel.yaml",
    ".tox*"
]
